--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,3 +5,17 @@
 body {
   background-color: rgb(249 250 251 / 1);
 }
+
+::-webkit-scrollbar {
+  width: 1rem;               
+}
+
+::-webkit-scrollbar-track {
+  background: #060B28;        
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #2F5AFF;    
+  border-radius: .5rem;       
+  border: 0.25rem solid #060B28;  
+}
