--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
+html, body, #__next {
   /* background-color: rgb(249 250 251 / 1); */
   height: 100%;
 }
